# ssg

./: .gitignore  LICENSE  README.md  config.toml  pyproject.toml
docs/: index.html
docs/blog/glorfindel/: index.html
docs/blog/majesty/: index.html
docs/blog/tom/: index.html
docs/contact/: index.html
src/: block_md.py  copy_static_content.py  generate_content.py  htmlnode.py  inline_md.py  main.py  site_generator.py  test_block_md.py  test_generate_content.py  test_htmlnode.py  test_inline_md.py  test_site_generator.py  test_textnode.py  textnode.py
